# heystupid

./: .gitignore  Cargo.toml  README.md
python/: heystupid.py
src/: main.rs
