[package]
name = "heystupid"
version = "0.1.4"
edition = "2024"

[dependencies]
atty = "0.2.14"
clap = { version = "4.0", features = ["derive"] }
dirs = "6.0.0"
sysinfo = "0.29"
chrono = "0.4"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
once_cell = "1.21.3"
